// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body /> should render correctly 1`] = `
<Fragment>
  <Body__BodyContainer>
    <Body__Title>
      <a
        href="#"
      >
        Je suis le titre
      </a>
    </Body__Title>
    <Body__NewsInfos>
      <CroppedLabel
        label={
          Object {
            "color": "success",
            "name": "Test & Democratie",
          }
        }
        maxSize={9}
      />
      <FormattedMessage
        id="global.byDate"
        values={
          Object {
            "date": "2019-11-09",
          }
        }
      />
       
      <FormattedMessage
        id="global.byAuthor"
        values={
          Object {
            "author": "admin",
          }
        }
      />
    </Body__NewsInfos>
    <Body__Paraph>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </Body__Paraph>
  </Body__BodyContainer>
</Fragment>
`;

exports[`Body /> should render correctly but without paraph in body 1`] = `
<Fragment>
  <Body__BodyContainer>
    <Body__Title>
      <a
        href="#"
      >
        un titre pour le deuxième cas
      </a>
    </Body__Title>
    <Body__NewsInfos>
      <CroppedLabel
        label={
          Object {
            "color": "success",
            "name": "Test et Jest",
          }
        }
        maxSize={9}
      />
      <FormattedMessage
        id="global.byDate"
        values={
          Object {
            "date": "19/12/2019",
          }
        }
      />
       
      <FormattedMessage
        id="global.byAuthor"
        values={
          Object {
            "author": "admin",
          }
        }
      />
    </Body__NewsInfos>
    <Body__Paraph />
  </Body__BodyContainer>
</Fragment>
`;
